--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
     <script src="{% static 'assets/js/theme.js' %}"></script>
     <script src="{% static 'assets/js/uploadButton.js' %}"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="{% static 'assets/js/progressBar.js' %}"></script>
+    <script src="{% static 'assets/js/upload3.js' %}"></script>
 </body>
 
 </html>
